--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -44,6 +44,10 @@ body {
     padding-bottom: 24px;
 }
 
+.threeline{
+    display: none;
+}
+
 .linksName {
     color: black;
     text-decoration: none;
